Some work over the past few days, misc stuff